# bic-test-repository-llm

./: README.md
llm-test-task/: .gitignore  Makefile  README.md  pyproject.toml
llm-test-task/app/: Dockerfile  example.env  pyproject.toml
llm-test-task/app/src/: config.py  logger.py  main.py
llm-test-task/app/src/api/: endpoints.py
llm-test-task/app/src/schemas/: benchmarks.py  models.py  prompts.py
llm-test-task/app/src/services/base/: client.py  exceptions.py
llm-test-task/app/src/services/benchmarker/: file_utils.py  run_utils.py
llm-test-task/app/src/services/openrouter/: client.py
llm-test-task/benchmarks/: benchmark_results_deepseek_deepseek-r1-0528-qwen3-8b:free_20250912_020957.csv  benchmark_results_meta-llama_llama-4-maverick:free_20250912_005414.csv  benchmark_results_tngtech_deepseek-r1t-chimera:free_20250912_004837.csv
llm-test-task/logs/: server_logs.txt
llm-test-task/promts/: 1.json  2.json  3.json  4.json  5.json
